style: add kbd styling for keyboard input
- Define font-family and margin for kbd elements

--- a/custom.css
+++ b/custom.css
@@ -22,6 +22,11 @@ body {
 	text-spacing-trim: normal;
 }
 
+kbd {
+	font-family: var(--mono-font);
+	margin: 0 0.25em;
+}
+
 p > img:only-child,
 p > a:only-child > img:only-child {
 	display: block;
